<resources>
    <string name="app_name">FirebaseEjemplo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="BotonIniciarSesion">Iniciar sesión</string>
    <string name="BotonRecuperarContraseña">Recuperar contraseña</string>
    <string name="BotonRegistrarse">¿Sin cuenta?</string>
    <string name="texto1">Correo</string>
    <string name="texto2">Contraseña</string>


</resources>